# deepin-screen-recorder

./: .clog.toml  .gitignore  .project.json  .transifexrc  CHANGELOG.md  CMakeLists.txt  README.md  README.zh_CN.md  com.deepin.ScreenRecorder.service  com.deepin.Screenshot.service  config.h.in  deepin-recorder  deepin-recorder.pro  deepin-screen-recorder-dbus.desktop  deepin-screen-recorder.desktop  deepin-screen-recorder.pro  deepin-screen-recorder.qrc  deepin-screen-shot-dbus.desktop  deepin-screenshot  deepin-screenshot.desktop  linglong.yaml  main.cpp  main_window.cpp  main_window.h  record_process.cpp  record_process.h  screen_shot_recorder.pro  screen_windows_info.cpp  screen_windows_info.h  settings.h  shell_process.cpp  shell_process.h  single_application.cpp  test.cpp  translate_ts2desktop.sh  translations.pri  window_manager.cpp  window_manager.h  zh_hans.ts
dde-dock-plugins/recordtime/: CMakeLists.txt  dbusservice.h  recordtimeplugin.cpp  recordtimeplugin.h  res.qrc  timewidget.cpp  timewidget.h
dde-dock-plugins/shotstart/: CMakeLists.txt  com.deepin.dde.dock.module.shot-start-plugin.gschema.xml  iconwidget.h  res.qrc  shotstartplugin.cpp  shotstartplugin.h  tipswidget.cpp  tipswidget.h
pin_screenshots/: CMakeLists.txt  com.deepin.PinScreenShots.service  main.cpp  mainwindow.cpp  mainwindow.h  pin_screenshots.pro  pinscreenshots.cpp  pinscreenshots.h  putils.cpp  putils.h
pin_screenshots/accessibility/: acObjectList.h  accessible.pri  accessiblefunctions.h
pin_screenshots/service/: dbuspinscreenshotsadaptor.cpp  dbuspinscreenshotsadaptor.h  ocrinterface.cpp  ocrinterface.h  pinscreenshotsinterface.cpp  pinscreenshotsinterface.h
pin_screenshots/ui/: menucontroller.cpp  menucontroller.h  subtoolwidget.cpp  subtoolwidget.h  toolbar.cpp  toolbar.h  toolbarwidget.cpp  toolbarwidget.h
src/: CMakeLists.txt  RecorderRegionShow.cpp  RecorderRegionShow.h  avinputstream.cpp  avinputstream.h  avoutputstream.cpp  avoutputstream.h  button_feedback.cpp  button_feedback.h  camera_process.cpp  camera_process.h  capture.cpp  capture.h  constant.cpp  constant.h  countdown_tooltip.cpp  countdown_tooltip.h  dbus_name.cpp  dbus_name.h  deepin-recorder.pro  deepin-screen-recorder.pro  desktopportal.cpp  desktopportal.h  event_monitor.cpp  event_monitor.h  gifrecord.cpp  gifrecord.h  glob.cmake  keydefine.h  main.cpp  main_window.cpp  main_window.h  process_tree.cpp  process_tree.h  qwayland-treeland-capture-unstable-v1.cpp  qwayland-treeland-capture-unstable-v1.h  record_button.cpp  record_button.h  record_option_panel.cpp  record_option_panel.h  (+36 more)
src/accessibility/: acObjectList.h  acTextDefine.h  accessible.cmake  accessible.pri  accessiblefunctions.h
src/camera/: LPF_V4L2.c  LPF_V4L2.h  camera.cmake  devnummonitor.cpp  devnummonitor.h  majorimageprocessingthread.cpp  majorimageprocessingthread.h
src/dbus/: audioport.cpp  audioport.h  audioportlist.cpp  audioportlist.h  com_deepin_daemon_audio.cpp  com_deepin_daemon_audio.h  com_deepin_daemon_audio_sink.cpp  com_deepin_daemon_audio_sink.h  com_deepin_daemon_audio_source.cpp  com_deepin_daemon_audio_source.h
src/dbusinterface/: aiassistantinterface.cpp  aiassistantinterface.h  com.deepin.daemon.SoundEffect.xml  com.deepin.daemon.Zone.xml  com.deepin.dde.ControlCenter.xml  dbuscontrolcenter.cpp  dbuscontrolcenter.h  dbusinterface.cmake  dbusnotify.cpp  dbusnotify.h  dbussoundeffect.cpp  dbussoundeffect.h  dbuszone.cpp  dbuszone.h  drawinterface.cpp  drawinterface.h  ocrinterface.cpp  ocrinterface.h  org.freedesktop.Notifications.xml  pinscreenshotsinterface.cpp  pinscreenshotsinterface.h
src/dbusservice/: com.deepin.Screenshot.xml  dbusscreenshot.cpp  dbusscreenshot.h  dbusscreenshotservice.cpp  dbusscreenshotservice.h  dbusserver.cmake
src/dde-dock-plugins/: CMakeLists.txt  dde-dock-plugins.pro
src/ext-image-capture/: extcapturebridge.cpp  extcapturebridge.h  extcaptureframebuffer.cpp  extcaptureframebuffer.h  extcaptureintegration.cpp  extcaptureintegration.h  extcapturerecorder.cpp  extcapturerecorder.h  multiscreencapturecoordinator.cpp  multiscreencapturecoordinator.h  multiscreenframecompositor.cpp  multiscreenframecompositor.h
src/gstrecord/: gstinterface.cpp  gstinterface.h  gstrecord.cmake  gstrecordx.cpp  gstrecordx.h
src/icons/: icons.qrc
src/libdscreen-recorder/: CMakeLists.txt  global.cpp  global.h  libdscreen_recorder_global.h
src/menucontroller/: menucontroller.cmake  menucontroller.cpp  menucontroller.h
src/pin-screenshots/: CMakeLists.txt  Main.qml  main.cpp
src/pin_screenshots/: com.deepin.PinScreenShots.service  main.cpp  mainwindow.cpp  mainwindow.h  pin_screenshots.pro  pinscreenshots.cpp  pinscreenshots.h  putils.cpp  putils.h  settings.cpp  settings.h  translations.pri  utils.cpp  utils.h
src/screen-recorder/: CMakeLists.txt  cmdlineoptions.cpp  cmdlineoptions.h  main.cpp  screenshot.cpp  screenshot.h
src/stub_linux/: stub.pri
src/tests/: CMakeLists.txt  main.cpp  test-prj-running.sh  test_all_interfaces.h  ut_RecorderRegionShow.h  ut_button_feedback.h  ut_countdown_tooltip.h  ut_main_window.h  ut_process_tree.h  ut_record_process.h  ut_screen_shot_recorder.pro  ut_screenshot.h  ut_settings.h  ut_show_buttons.h  ut_utils.h
src/translations/: deepin-screen-recorder.ts  deepin-screen-recorder_am_ET.ts  deepin-screen-recorder_ast.ts  deepin-screen-recorder_az.ts  deepin-screen-recorder_bg.ts  deepin-screen-recorder_ca.ts  deepin-screen-recorder_cs.ts  deepin-screen-recorder_de.ts  deepin-screen-recorder_el.ts  deepin-screen-recorder_en_US.ts  deepin-screen-recorder_es.ts  deepin-screen-recorder_fr.ts  deepin-screen-recorder_gl_ES.ts  deepin-screen-recorder_hr.ts  deepin-screen-recorder_it.ts  deepin-screen-recorder_ja.ts  deepin-screen-recorder_ms.ts  deepin-screen-recorder_ne.ts  deepin-screen-recorder_pl.ts  deepin-screen-recorder_pt_BR.ts  deepin-screen-recorder_ru.ts  deepin-screen-recorder_sl.ts  (+5 more)
src/utils/: log.cpp  (+58 more)
xdg-desktop-portal-kde/: CMakeLists.txt  CTestTestfile.cmake  Messages.sh  README.md  ecm_uninstall.cmake  xdg-desktop-portal-kde.cbp  xdg-desktop-portal-kde.pro
(+935 files in other folders)
